--- a/timestampmicroservice/package.json
+++ b/timestampmicroservice/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cors": "^2.8.0",
     "dotenv": "^16.0.1",
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "strftime": "^0.10.1"
   },
   "engines": {
     "node": "16.14.2"
