--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.0",
+    "dns": "^0.2.2",
     "dotenv": "^16.0.1",
     "express": "^4.12.4",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.4",
+    "multer": "^1.4.5-lts.1",
+    "shortid": "^2.2.16",
     "strftime": "^0.10.1"
   },
   "engines": {
