--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
-    "cors": "^2.8.0",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "dns": "^0.2.2",
     "dotenv": "^16.0.1",
     "express": "^4.12.4",
+    "helmet": "^5.1.1",
+    "ip-anonymize": "^0.1.0",
+    "mocha": "^10.0.0",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.2.9",
     "shortid": "^2.2.16",
     "strftime": "^0.10.1"
   },
